--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@ permalink:           pretty
 title:               Jiang Zerui
 tagline:             '极简-Live a little'
 description:         ''
-url:                 http://jiangzerui.cn
-baseurl:            https://jiangzerui.github.io
+baseurl:            https://cufembaer.github.io
 paginate:            5
 
 # About/contact
