--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ permalink:           pretty
 
 
 # Setup
-title:               Jiang Zerui
-tagline:             '极简-Live a little'
+title:               CUFE
+tagline:             '中央财经大学MBA学习资源'
 description:         ''
 baseurl:            https://cufembaer.github.io
 paginate:            5
